--- a/neat.html
+++ b/neat.html
@@ -11,12 +11,14 @@ head_part {
 	width: 100%;
 	top: 5%;
 	text-align: center;
+	font-size: 1.5vw;
 }
 big_square2 {
 	display: inline-block;
 	position: absolute;
-	left: 10%;
-	top: 10%;
+	left: 5%;
+	top: 15%;
+	width: 25%;
 }
 big_square2_text {
 	position: inherit;
@@ -24,8 +26,44 @@ big_square2_text {
 	bottom: 5%;
 	text-align: center;
 	font-family: TheFont;
-	
+	font-size: 1vw;
 }
+big_square1 {
+	display: inline-block;
+	position: absolute;
+	left: 38%;
+	top: 15%;
+	width: 25%;
+}
+big_square1_text {
+	position: inherit;
+	left: 5%;
+	bottom: 5%;
+	text-align: center;
+	font-family: TheFont;
+	font-size: 1vw;
+}
+big_square3 {
+	display: inline-block;
+	position: absolute;
+	right: 5%;
+	top: 15%;
+	width: 25%;
+}
+big_square3_text {
+	position: inherit;
+	left: 5%;
+	bottom: 5%;
+	text-align: center;
+	font-family: TheFont;
+	font-size: 1vw;
+}
+img {
+	width: 100%;
+}
+
 </style>
 <head_part>head_part</head_part>
-<big_square2><img src="290x218.jpg"></img><big_square2_text>big_square2_text</big_square2_text></big_square2>
+<big_square2><img src="290x218.jpg"></img><big_square2_text><a href="netflix.com">big_square2_text</a></big_square2_text></big_square2>
+<big_square1><img src="290x218.jpg"></img><big_square1_text><a href="netflix.com">big_square1_text</a></big_square1_text></big_square1>
+<big_square3><img src="290x218.jpg"></img><big_square3_text><a href="netflix.com">big_square3_text</a></big_square3_text></big_square3>
