--- a/neat.html
+++ b/neat.html
@@ -1,69 +1,7 @@
-<style type="text/css">
-@font-face {
-    font-family: TheFont;
-    src: url(fonts/Montserrat-Black.otf);
-}
-head_part {
-	position: absolute;
-	font-family: TheFont;
-	left: 0%;
-	right: 0%;
-	width: 100%;
-	top: 5%;
-	text-align: center;
-	font-size: 1.5vw;
-}
-big_square2 {
-	display: inline-block;
-	position: absolute;
-	left: 5%;
-	top: 15%;
-	width: 25%;
-}
-big_square2_text {
-	position: inherit;
-	left: 5%;
-	bottom: 5%;
-	text-align: center;
-	font-family: TheFont;
-	font-size: 1vw;
-}
-big_square1 {
-	display: inline-block;
-	position: absolute;
-	left: 38%;
-	top: 15%;
-	width: 25%;
-}
-big_square1_text {
-	position: inherit;
-	left: 5%;
-	bottom: 5%;
-	text-align: center;
-	font-family: TheFont;
-	font-size: 1vw;
-}
-big_square3 {
-	display: inline-block;
-	position: absolute;
-	right: 5%;
-	top: 15%;
-	width: 25%;
-}
-big_square3_text {
-	position: inherit;
-	left: 5%;
-	bottom: 5%;
-	text-align: center;
-	font-family: TheFont;
-	font-size: 1vw;
-}
-img {
-	width: 100%;
-}
-
-</style>
+<link href="neat.css" rel="stylesheet">
 <head_part>head_part</head_part>
 <big_square2><img src="290x218.jpg"></img><big_square2_text><a href="netflix.com">big_square2_text</a></big_square2_text></big_square2>
 <big_square1><img src="290x218.jpg"></img><big_square1_text><a href="netflix.com">big_square1_text</a></big_square1_text></big_square1>
 <big_square3><img src="290x218.jpg"></img><big_square3_text><a href="netflix.com">big_square3_text</a></big_square3_text></big_square3>
+<tiny_tile1><img src="290x218.jpg"></img><tiny_tile1_text><a href="netflix.com">tiny_tile1_text</a></tiny_tile1_text></tiny_tile1>
+<tiny_tile2><img src="290x218.jpg"></img><tiny_tile2_text><a href="netflix.com">tiny_tile2_text</a></tiny_tile2_text></tiny_tile2>
