Added select menu styling

--- a/neat.html
+++ b/neat.html
@@ -3,5 +3,14 @@
 <big_square2><img src="290x218.jpg"></img><big_square2_text><a href="netflix.com">big_square2_text</a></big_square2_text></big_square2>
 <big_square1><img src="290x218.jpg"></img><big_square1_text><a href="netflix.com">big_square1_text</a></big_square1_text></big_square1>
 <big_square3><img src="290x218.jpg"></img><big_square3_text><a href="netflix.com">big_square3_text</a></big_square3_text></big_square3>
+<styled-select>
+<select>
+<option>option</option>
+<option>option</option>
+</select>
+</styled-select>
 <tiny_tile1><img src="290x218.jpg"></img><tiny_tile1_text><a href="netflix.com">tiny_tile1_text</a></tiny_tile1_text></tiny_tile1>
 <tiny_tile2><img src="290x218.jpg"></img><tiny_tile2_text><a href="netflix.com">tiny_tile2_text</a></tiny_tile2_text></tiny_tile2>
+<tiny_tile3><img src="290x218.jpg"></img><tiny_tile3_text><a href="netflix.com">tiny_tile3_text</a></tiny_tile3_text></tiny_tile3>
+<tiny_tile4><img src="290x218.jpg"></img><tiny_tile4_text><a href="netflix.com">tiny_tile4_text</a></tiny_tile4_text></tiny_tile4>
+<tiny_tile5><img src="290x218.jpg"></img><tiny_tile5_text><a href="netflix.com">tiny_tile5_text</a></tiny_tile5_text></tiny_tile5>
