--- a/neat.html
+++ b/neat.html
@@ -1,7 +1,9 @@
 <link href="neat.css" rel="stylesheet">
+<vid_part></vid_part>
+<span id="menu">
 <head_part>head_part</head_part>
 <big_square2><img src="290x218.jpg"></img><big_square2_text><a href="netflix.com">big_square2_text</a></big_square2_text></big_square2>
-<big_square1><img src="290x218.jpg"></img><big_square1_text><a href="netflix.com">big_square1_text</a></big_square1_text></big_square1>
+<big_square1><img src="290x218.jpg"></img><big_square1_text><a href="javascript:StartVideo('https://www.youtube.com/embed/RX5Iw-XsWu4?list=PLU12uITxBEPHOJO1FU8qll6gQmKcXp5S7')">big_square1_text</a></big_square1_text></big_square1>
 <big_square3><img src="290x218.jpg"></img><big_square3_text><a href="netflix.com">big_square3_text</a></big_square3_text></big_square3>
 <styled-select>
 <select>
@@ -28,3 +30,37 @@
 <tiny_tile15><img src="290x218.jpg"></img><tiny_tile15_text><a href="netflix.com">tiny_tile15_text</a></tiny_tile15_text></tiny_tile15>
 
 <bottom_description>bottom_description</bottom_description>
+</span>
+<script type="text/javascript">
+state = "stopped"
+function handle() {
+	if(state == "hidden") {
+		ShowVideo()
+	}
+	else if(state == "shown") {
+		HideVideo()
+	}
+}
+function ShowVideo() {
+	menu = document.getElementById("menu");
+	menu.style.visibility = "hidden";
+	vidpart = document.getElementById("vid_part");
+	vidpart.style.visibility = "visible";
+	state = "shown"
+}
+function HideVideo() {
+	menu = document.getElementById("menu");
+	menu.style.visibility = "visible";
+	vidpart = document.getElementById("vid_part");
+	vidpart.style.visibility = "hidden";
+	state = "hidden"
+}
+function StartVideo(url) {
+	menu = document.getElementById("menu");
+	menu.style.visibility = "hidden";
+	vidpart = document.getElementsByTagName("vid_part");
+	vidpart[0].style.visibility = "visible";
+	vidpart[0].innerHTML = "<iframe src='" + url + "'></iframe>"
+	state = "shown"
+}
+</script>
