--- a/new_liptv.html
+++ b/new_liptv.html
@@ -376,6 +376,7 @@ function Do_Newsmax() {
 	SetSquare("<a href='javascript:Do_ABC_News()'>ABC News Digital</a>", "abcn.jpg", "sugg5")
 }
 function Do_FNC() {
+	StartVideo(FNC)
 	SetSquare("<a href='javascript:Do_NewsTalk()'>FM NewsTalk 97.1</a>", "971.jpg", "sugg1")
 	SetSquare("<a href='javascript:Do_Newsmax()'>Newsmax TV</a>", "newsmax.jpg", "sugg2")
 	SetSquare("<a href='javascript:Do_Undisputed()'><white>Undisputed 24/7</white></a>", "undisputed.jpg", "sugg3")
